--- a/app/src/main/res/layout/activity_fecha_actual.xml
+++ b/app/src/main/res/layout/activity_fecha_actual.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".Menu">
+    tools:context="gestion_juveniles.com.gestionjuveniles_mobile.fecha_actual">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -17,12 +17,11 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            android:title="Fecha Actual"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_menu" />
+    <include layout="@layout/content_fecha_actual" />
 
 
 
