--- a/app/src/main/res/layout/activity_fecha_actual.xml
+++ b/app/src/main/res/layout/activity_fecha_actual.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="gestion_juveniles.com.gestionjuveniles_mobile.fecha_actual">
+    tools:context=".Fecha_Actual">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -20,6 +20,7 @@
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </android.support.design.widget.AppBarLayout>
+
 
     <include layout="@layout/content_fecha_actual" />
 
